<resources>
    <string name="app_name">Gratitude Journal </string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account_sign_up">No account? Sign up!</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_out">Log out</string>
    <string name="how_was_your_day_today">How was your day today?</string>
    <string name="amazing">Amazing</string>
    <string name="good">Good</string>
    <string name="okay">Okay</string>
    <string name="bad">Bad</string>
    <string name="terrible">Terrible</string>
    <string name="swipe_left_to_continue_skip"><![CDATA[Swipe left to continue/skip -->]]></string>
    <string name="how_has_your_day_been">How has your day been?</string>
    <string name="home">Home</string>
    <string name="compose_entry">Compose Entry</string>
    <string name="what_are_you_grateful_for_today">What are you grateful for today?</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="mood">Mood:</string>
    <string name="friends">Friends</string>
    <string name="to_add_a_friend_enter_their_username_here">To add a friend, enter their username here:</string>
    <string name="add">Add</string>
    <string name="to_remove_a_friend_select_their_username">To remove a friend, select their username:</string>
    <string name="click_below_to_view_friends">Click below to view friends:</string>
    <string name="friends_list">Friends list:</string>
    <string name="no_friends_added">No friends added!</string>
    <string name="close_friends">Close Friends</string>
    <string name="to_add_a_close_friend_enter_their_username_here">To add a close friend, enter their username here:</string>
    <string name="to_remove_a_close_friend_select_their_username">To remove a close friend, select their username:</string>
    <string name="click_below_to_view_close_friends">Click below to view close friends:</string>
    <string name="close_friends_list">Close friends list:</string>
    <string name="no_close_friends_added">No close friends added!</string>
    <string name="compose_or_edit_your_journal_entry">Compose or edit your journal entry</string>
    <string name="view_past_entries">View past entries</string>
    <string name="view_or_edit_friends_and_close_friends">View or edit friends and close friends</string>
    <string name="mention_friends">Mention friends</string>
    <string name="enter_the_usernames_of_up_to_3_friends_nyou_would_like_to_mention_separated_by_commas">Enter the usernames of up to 3 friends\nyou would like to mention, separated by commas</string>
    <string name="user1_user2_user3">user1, user2, user3</string>
    <string name="mention_close_friends">Mention close friends</string>
    <string name="enter_the_usernames_of_up_to_3_close_friends_nyou_would_like_to_mention_separated_by_commas">Enter the usernames of up to 3 close friends\nyou would like to mention, separated by commas</string>
    <string name="quote_from_zenquotes_io">Quote from zenquotes.io</string>
    <string name="load_more_recent_entries">Load more recent entries!</string>
    <string name="please_select_you_timezone_n_this_can_be_changed_later_in_settings">Please select you timezone \n (this can be changed later in settings)</string>
    <string name="do_you_want_to_notify_friends_n_when_you_mention_them_in_a_journal_entry">Do you want to notify friends \n when you mention them in a journal entry?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="done">Done!</string>
    <string name="do_you_want_to_be_notified_n_when_close_friends_mention_you_in_a_journal_entry">Do you want to be notified \n when close friends mention you in a journal entry?</string>
    <string name="do_you_want_to_notify_close_friends_n_when_you_mention_them_in_a_journal_entry">Do you want to notify close friends \n when you mention them in a journal entry?</string>
    <string name="do_you_want_to_be_notified_n_when_friends_mention_you_in_a_journal_entry">Do you want to be notified \n when friends mention you in a journal entry?</string>
    <string name="no_new_mentions">No new mentions!</string>
    <string name="view_friend_mentions">View friend mentions</string>
    <string name="view_close_friend_mentions">View close friend mentions</string>
    <string name="you_have_seen_all_close_friend_mentions">You have seen all close friend mentions!</string>
    <string name="view_stats">View stats</string>
    <string name="you_haven_t_logged_any_moods_yet">You haven\'t logged any moods yet!</string>
    <string name="happiness_over_time">Happiness Over Time</string>
    <string name="mood_distribution">Mood Distribution</string>
    <string name="most_used_words">Most Used Words</string>
    <string name="no_stats_to_display">No stats to display</string>
    <string name="thank_you">Thank you for writing this entry</string>
    <string name="thank_you_for_writing_this_entry">Thank you for writing this entry</string>
</resources>