<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MoodActivity">

    <TextView
        android:id="@+id/tvMoodPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/how_has_your_day_been"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btnAmazing"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:backgroundTint="#F8CC7F"
        android:text="@string/amazing"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMoodPrompt"
        tools:layout_height="50dp" />

    <Button
        android:id="@+id/btnGood"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnAmazing"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#D2B08C"
        android:text="@string/good"
        tools:layout_height="50dp" />

    <Button
        android:id="@+id/btnOkay"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnGood"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#808080"
        android:text="@string/okay"
        tools:layout_height="50dp" />

    <Button
        android:id="@+id/btnBad"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnOkay"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#374C56"
        android:text="@string/bad"
        tools:layout_height="50dp" />

    <Button
        android:id="@+id/btnTerrible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnBad"
        android:layout_width="110dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#04202F"
        android:text="@string/terrible"
        tools:layout_height="50dp" />

    <TextView
        android:id="@+id/tvSwipeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:text="@string/swipe_left_to_continue_skip"
        android:textSize="12sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnTerrible"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>