<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MentionFriendsActivity">

    <TextView
        android:id="@+id/tvFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/mention_friends"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvFriendsList"
        android:onClick="expandFriendsList"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFriends"
        tools:ignore="MissingConstraints" >

        <LinearLayout
            android:id="@+id/llFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true"
            >

            <TextView
                android:id="@+id/tvFriendsCardviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friends_list"
                android:textSize="17sp"
                />

            <TextView
                android:id="@+id/tvFriendsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:text="@string/no_friends_added"
                tools:text="This is a list of friends usernames, which will be separated by commas and spaces and will maybe spill over onto multiple lines like this example text!" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvFriendsPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_usernames_of_up_to_3_friends_nyou_would_like_to_mention_separated_by_commas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvFriendsList" />

    <EditText
        android:id="@+id/etFriends"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/user1_user2_user3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvFriendsPrompt" />


    <TextView
        android:id="@+id/tvCloseFriends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="@string/mention_close_friends"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/etFriends"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvCloseFriendsList"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:onClick="expandCloseFriendsList"
        app:cardCornerRadius="5dp"
        app:cardElevation="10dp"
        app:contentPadding="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCloseFriends"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:id="@+id/llCloseFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCloseFriendsCardviewText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_friends_list"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tvCloseFriendsList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no_close_friends_added"
                android:visibility="gone"
                tools:text="This is a list of close friends usernames, which will be separated by commas and spaces and will maybe spill over onto multiple lines like this example text!" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvCloseFriendsPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/enter_the_usernames_of_up_to_3_close_friends_nyou_would_like_to_mention_separated_by_commas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvCloseFriendsList" />

    <EditText
        android:id="@+id/etCloseFriends"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:hint="@string/user1_user2_user3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCloseFriendsPrompt" />

    <Button
        android:id="@+id/btnSave"
        app:layout_constraintTop_toBottomOf="@+id/etCloseFriends"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_margin="10dp"
        android:backgroundTint="@color/new_color"/>

    <TextView
        android:id="@+id/tvSwipeLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/swipe_left_to_continue_skip"
        android:textSize="12sp"
        android:layout_marginEnd="30dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/btnSave"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>