<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#C3C3C3"
        android:ems="10"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#C3C3C3"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="45dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="45dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#2196F3"
        android:text="@string/login"
        tools:layout_height="50dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="225dp"
        android:layout_height="50dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:backgroundTint="#91CEFF"
        android:text="@string/no_account_sign_up"
        tools:layout_height="50dp" />

</LinearLayout>